bk_ida/gccida/g1/cse_insn
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_insn/src/cse.c:5238:4: error: expected ';' after expression
rtx v27; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_insn/src/cse.c:5238:5: error: use of undeclared identifier 'v27'
rtx v27; // r15 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_insn/src/cse.c:5239:4: error: expected ';' after expression
rtx v28; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_insn/src/cse.c:5239:5: error: use of undeclared identifier 'v28'
rtx v28; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_insn/src/cse.c:5245:4: error: expected ';' after expression
rtx v34; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_insn/src/cse.c:5245:5: error: use of undeclared identifier 'v34'
rtx v34; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_insn/src/cse.c:5247:4: error: expected ';' after expression
rtx v36; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_insn/src/cse.c:5247:5: error: use of undeclared identifier 'v36'
rtx v36; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_insn/src/cse.c:5251:4: error: expected ';' after expression
rtx v40; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_insn/src/cse.c:5251:5: error: use of undeclared identifier 'v40'
rtx v40; // rbx 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_insn/src/cse.c:5252:4: error: expected ';' after expression
rtx v41; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_insn/src/cse.c:5252:5: error: use of undeclared identifier 'v41'
rtx v41; // r15 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_insn/src/cse.c:5276:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v65; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_insn/src/cse.c:5278:4: error: expected ';' after expression
rtx v67; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_insn/src/cse.c:5278:5: error: use of undeclared identifier 'v67'
rtx v67; // r12 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_insn/src/cse.c:5283:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v72; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_insn/src/cse.c:5284:4: error: expected ';' after expression
rtx v73; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_insn/src/cse.c:5284:5: error: use of undeclared identifier 'v73'
rtx v73; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_insn/src/cse.c:5285:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v74; // r13d 
^
enum 
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/cse_insn/src/obj/cse.o] Error 1
